# gated-delta-network-agent

./: .gitignore  Makefile  README.md  gdn.py  package.json  prepare.py  pyproject.toml  train.py
.pi/: damage-control-rules.yaml  settings.json
.pi/prompts/: gdn_experiment.md  mix_experiment.md  train_experiment.md
.pi/skills/: mlx-experiment.md
extensions/: experiment-enforcer.test.ts  experiment-enforcer.ts  footer.ts
tests/: test_main.py
