[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Apple Silicon MLX port of Karpathy's autoresearch"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
